[package]
name = "rt-dose-kernel"
version = "0.1.0"
edition = "2021"
description = "Rust→WASM compute kernels for the RT dose viewer (iso-band rasterization). Compiled via Docker (see Dockerfile). RTV Wave 4."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
